--- a/hackoverflow/public/index.html
+++ b/hackoverflow/public/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="https://dewey.tailorbrands.com/production/brand_version_mockup_image/491/1635821491_8f326162-bbaf-471f-95c5-0ec82aa76d7a.png?cb=1548814856">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <title>hackoverflow</title>
+    <title>HacktivOverflow</title>
   </head>
   <body>
     <noscript>
